--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.19.1",
     "next": "13.2.4",
+    "next-routes": "^1.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.9",
